--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 :root {
-	font-family: "Space Grotesk", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+	font-family: "Poppins", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 	line-height: 1.5;
 	font-weight: 400;
 
-	/* color: rgba(255, 255, 255, 1); */
+	color: #242424;
 
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
@@ -64,6 +64,7 @@ h1 {
 
 .scene {
 	height: 60vh;
+	border: 1px solid black;
 	border-radius: 32px;
 	overflow: hidden;
 }
@@ -98,7 +99,7 @@ p {
 	margin: 50px 0;
 	height: 90dvh;
 	height: 90vh;
-	/* border: 1px solid black; */
+	border: 1px solid black;
 	border-radius: 32px;
 	overflow: hidden;
 }
